force-app/main/default/objects/vlocity_ins__ConsumerProvider__c/fields/vlocity_ins__ProviderAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consumer Providers</relationshipLabel>
    <relationshipName>ConsumerProviders</relationshipName>
    <type>Lookup</type>
</CustomField>