force-app/main/default/objects/vlocity_ins__ConsumerProvider__c/fields/vlocity_ins__ProviderContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consumer Providers (Provider Contact)</relationshipLabel>
    <relationshipName>ConsumerProviders</relationshipName>
    <type>Lookup</type>
</CustomField>