force-app/main/default/objects/vlocity_ins__ConsumerProvider__c/fields/vlocity_ins__SpecialtyType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SpecialtyType__c</fullName>
    <label>Specialty Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adult Intensivist</fullName>
            </value>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>Bariatric Medicine / Surgery</fullName>
            </value>
            <value>
                <fullName>Burn / Trauma</fullName>
            </value>
            <value>
                <fullName>Cardiac Catheterization</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Surgery</fullName>
            </value>
            <value>
                <fullName>Colorectal Surgery</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Electrophysiology</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Family Practice</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Geriatrics</fullName>
            </value>
            <value>
                <fullName>Gynecologic Oncology</fullName>
            </value>
            <value>
                <fullName>Hematology Oncology</fullName>
            </value>
            <value>
                <fullName>Hepatobiliary</fullName>
            </value>
            <value>
                <fullName>Hospitalist</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Interventional Radiology</fullName>
            </value>
            <value>
                <fullName>Medical Genetics</fullName>
            </value>
            <value>
                <fullName>Neonatology</fullName>
            </value>
            <value>
                <fullName>Nephrology</fullName>
            </value>
            <value>
                <fullName>Neuroradiology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>